redesigned the algorithm and comments

--- a/github_Paganel.ipynb
+++ b/github_Paganel.ipynb
@@ -2,67 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за 33 попыток\n"
+      "Your algorithm guesses the average number per 5 attempts\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "33"
+       "5"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Code by guessing the number with the fewest attempts\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "count = 0                           # счетчик попыток\n",
     "number = np.random.randint(1,101)   # загадали число\n",
     "\n",
-    "def game_core_v1(number):\n",
-    "    '''Просто угадываем на random, никак не используя информацию о больше или меньше.\n",
-    "       Функция принимает загаданное число и возвращает число попыток'''\n",
-    "    count = 0\n",
-    "    while True:\n",
-    "        count+=1\n",
-    "        predict = np.random.randint(1,101) # предполагаемое число\n",
-    "        if number == predict: \n",
-    "            return count # выход из цикла, если угадали\n",
-    "        \n",
+    "\n",
     "def score_game(game_core):\n",
-    "    '''Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число'''\n",
+    "    \"\"\"Run the game 1000 times to find out how quickly the \n",
+    "    game guesses the number\n",
+    "    \n",
+    "    \"\"\" \n",
     "    count_ls = []\n",
-    "    np.random.seed(1)  # фиксируем RANDOM SEED, чтобы ваш эксперимент был воспроизводим!\n",
+    "    np.random.seed(1)  \n",
     "    random_array = np.random.randint(1,101, size=(1000))\n",
     "    for number in random_array:\n",
     "        count_ls.append(game_core(number))\n",
     "    score = int(np.mean(count_ls))\n",
-    "    print(f\"Ваш алгоритм угадывает число в среднем за {score} попыток\")\n",
+    "    print(f\"Your algorithm guesses the average number per {score} attempts\")\n",
     "    return(score)\n",
     "\n",
-    "def game_core_v2(number):\n",
-    "    '''Сначала устанавливаем любое random число, а потом уменьшаем или увеличиваем его в зависимости от того, больше оно или меньше нужного.\n",
-    "       Функция принимает загаданное число и возвращает число попыток'''\n",
-    "    count = 1\n",
-    "    predict = np.random.randint(1,101)# предполагаемое число\n",
-    "    while number != predict:\n",
-    "        count+=1\n",
-    "        if number > predict: \n",
-    "            predict += 1\n",
-    "        elif number < predict: \n",
-    "            predict -= 1\n",
-    "    return(count)\n",
-    "score_game(game_core_v2)"
+    "\n",
+    "def game_core_v4(guess_num):\n",
+    "    \"\"\"Code for calculating the mysterious number \n",
+    "    and returning the number of attempts\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    count = 0\n",
+    "    required_num = 50\n",
+    "    previous_num1 = 101\n",
+    "    previous_num2 = 0\n",
+    "    while True:\n",
+    "        count += 1\n",
+    "        if required_num == guess_num:\n",
+    "            break    \n",
+    "        if required_num < guess_num:\n",
+    "            previous_num2 = required_num + 1  \n",
+    "        else:\n",
+    "            previous_num1 = required_num - 1\n",
+    "        required_num = (previous_num1 + previous_num2)//2\n",
+    "    \n",
+    "    return count\n",
+    "score_game(game_core_v4)"
    ]
   }
  ],
